--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 	</section>	<!--  end listing section  -->
 <section id="login" class="search">
     <div class="wrapper">
-        <form action="#" method="post">
-				<input type="text" id="search" name="search" placeholder="Leave us your email address - we'll contact you within 2 hours!"  autocomplete="off"/>
-				<input type="submit" id="submit_search" name="submit_search"/>
+        <form action="#" method="get">
+				<input type="text" id="search" name="id_op" placeholder="Leave us your email address - we'll contact you within 2 hours!"  autocomplete="off"/>
+				<input type="submit" id="action" name="action"/>
 			</form>
     </div>
 </section>
