--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 <section id="login" class="search">
     <div class="wrapper">
         <form action="#" method="get">
-				<input type="text" id="search" name="id_op" placeholder="Leave us your email address - we'll contact you within 2 hours!"  autocomplete="off"/>
-				<input type="submit" id="action" name="action"/>
+				<input type="email" id="search" name="id_op" placeholder="Leave us your email address - we'll contact you within 2 hours!"  autocomplete="on"/>
+				<input type="submit" id="submit_search" name="action"/>
 			</form>
     </div>
 </section>
