--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<section class="hero">
 		<header>
 			<div class="wrapper">
-				<a href="https://saleswingsapp.com" target = "_blank"><img src="img/logo.png" class="logo" alt="" titl=""/></a>
+				<a href="https://saleswingsapp.com" target = "_blank"><img src="img/triplemint.svg"  height="45" class="logo" alt="" titl=""/></a>
 				<a href="#" class="hamburger"></a>
 				<nav>
 					<ul>
