Test additional page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>La Casa - Real Estate HTML5 Home Page Template</title>
+	<title>SalesWings Real Estate demo website</title>
 	<meta charset="utf-8">
 	<meta name="author" content="pixelhint.com">
 	<meta name="description" content="La casa free real state fully responsive html5/css3 home page website template"/>
@@ -21,7 +21,7 @@
 	<section class="hero">
 		<header>
 			<div class="wrapper">
-				<a href="https://triplemint.com" target = "_blank"><img src="img/triplemint.svg"  height="45" class="logo" alt="" titl=""/></a>
+
 				<a href="#" class="hamburger"></a>
 				<nav>
 					<ul>
@@ -80,7 +80,7 @@
 		<h1>Buy</h1>
 			<ul class="properties_list">
 				<li id = "buy-ExquisitLivingRoom">
-					<a href="#buy-ExquisitLivingRoom">
+					<a href="buy/exquisite-living-room.html">
 						<img src="img/property_1.jpg" alt="" title="" class="property_img"/>
 					</a>
 					<span class="price">$250000</span>
@@ -166,7 +166,7 @@
 <section id="login" class="search">
     <div class="wrapper">
         <form action="#" method="get">
-				<input type="email" id="search" name="id_op" placeholder="Leave us your email address - we'll contact you within 2 hours!"  autocomplete="on"/>
+				<input type="email" id="search" name="id_op" placeholder="Enter your email here"  autocomplete="off"/>
 				<input type="submit" id="submit_search" name="action"/>
 			</form>
     </div>
