--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 <section id="login" class="search">
     <div class="wrapper">
         <form action="#" method="get">
-				<input type="email" id="search" name="id_op" placeholder="Enter your email here"  autocomplete="off"/>
-				<input type="submit" id="submit_search" name="action"/>
+				<input type="email" id="search" placeholder="Enter your email here"  autocomplete="off"/>
 			</form>
     </div>
 </section>
