--- a/buy/exquisite-living-room.html
+++ b/buy/exquisite-living-room.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>SalesWings Real Estate demo website</title>
+
+	<!-- SW -->
+<script type="text/javascript" id="SW-4c76d2b1-d887-4894-a730-71cbe92fe9f7"></script><script> !function(){function a(){var a=document.createElement("script");a.type="text/javascript",a.async=1,a.src="//go.saleswingsapp.com/assets/javascripts/sw/4c76d2b1-d887-4894-a730-71cbe92fe9f7?enableFormTracker=true";var b=document.getElementById("SW-4c76d2b1-d887-4894-a730-71cbe92fe9f7");b.parentNode.insertBefore(a,b)}window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,0);window.attachEvent?window.attachEvent("onhashchange",a):window.addEventListener("hashchange",a,0);}();</script>
+<!-- SW -->
+</head>
+<body>
 <img src="../img/property_1.jpg">
 </br>Exquisit living room </br>
 2 kitchens, 2 bed, 2 bath... (288ftsq)
+</body>
