--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	<!-- SW -->
-<script type="text/javascript" id="SW-4c76d2b1-d887-4894-a730-71cbe92fe9f7"></script><script> !function(){function a(){var a=document.createElement("script");a.type="text/javascript",a.async=1,a.src="//go.saleswingsapp.com/assets/javascripts/sw/4c76d2b1-d887-4894-a730-71cbe92fe9f7?enableFormTracker=true";var b=document.getElementById("SW-4c76d2b1-d887-4894-a730-71cbe92fe9f7");b.parentNode.insertBefore(a,b)}window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,0);window.attachEvent?window.attachEvent("onhashchange",a):window.addEventListener("hashchange",a,0);}();</script>
+<!-- SW -->
+<script type="text/javascript" id="SW-c901cfe4-9835-437c-b1f0-d060299411ac"></script><script> !function(){function a(){var a=document.createElement("script");a.type="text/javascript",a.async=1,a.src="//saleswingsapp-dev.herokuapp.com/assets/javascripts/sw/c901cfe4-9835-437c-b1f0-d060299411ac?enableFormTracker=true";var b=document.getElementById("SW-c901cfe4-9835-437c-b1f0-d060299411ac");b.parentNode.insertBefore(a,b)}window.attachEvent?window.attachEvent("onload",a):window.addEventListener("load",a,0);window.attachEvent?window.attachEvent("onhashchange",a):window.addEventListener("hashchange",a,0);}();</script>
 <!-- SW -->
 </head>
 <body>
@@ -167,6 +167,7 @@
     <div class="wrapper">
         <form action="#" method="get">
 				<input type="email" id="search" placeholder="Enter your email here"  autocomplete="off"/>
+				<input type="submit" id="submit_search" name="action"/>
 			</form>
     </div>
 </section>
